ecmascript/parser/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/derivedUninitializedPropertyDeclaration/input.ts.stderr
error[1031]: `declare` modifier cannot appear on a class element
  --> $DIR/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/derivedUninitializedPropertyDeclaration/input.ts:10:5
   |
10 |     declare property: any; // ok because it's implicitly initialised
   |     ^^^^^^^

error[1031]: `declare` modifier cannot appear on a class element
  --> $DIR/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/derivedUninitializedPropertyDeclaration/input.ts:13:5
   |
13 |     declare property!: any; // ! is not allowed, this is an ambient declaration
   |     ^^^^^^^

error[1031]: `declare` modifier cannot appear on a class element
  --> $DIR/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/derivedUninitializedPropertyDeclaration/input.ts:16:5
   |
16 |     declare m() { return 2 } // not allowed on methods
   |     ^^^^^^^

error[1031]: `declare` modifier cannot appear on a class element
  --> $DIR/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/derivedUninitializedPropertyDeclaration/input.ts:17:5
   |
17 |     declare nonce: any; // ok, even though it's not in the base
   |     ^^^^^^^

error[1031]: `declare` modifier cannot appear on a class element
  --> $DIR/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/derivedUninitializedPropertyDeclaration/input.ts:18:5
   |
18 |     declare property = 'y' // initialiser not allowed with declare
   |     ^^^^^^^

error[1031]: `declare` modifier cannot appear on a class element
  --> $DIR/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/derivedUninitializedPropertyDeclaration/input.ts:21:5
   |
21 |     declare nonce: any; // ok, even though there's no base
   |     ^^^^^^^

error[1031]: `declare` modifier cannot appear on a class element
  --> $DIR/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/derivedUninitializedPropertyDeclaration/input.ts:31:5
   |
31 |     declare p: 'bye'; // ok
   |     ^^^^^^^

error[1031]: `declare` modifier cannot appear on a class element
  --> $DIR/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/derivedUninitializedPropertyDeclaration/input.ts:41:5
   |
41 |     declare p2: 'alpha'
   |     ^^^^^^^

error[1031]: `declare` modifier cannot appear on a class element
  --> $DIR/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/derivedUninitializedPropertyDeclaration/input.ts:54:5
   |
54 |     declare abstract p2: 'a' | 'b' | 'c'
   |     ^^^^^^^

error[1031]: `declare` modifier cannot appear on a class element
  --> $DIR/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/derivedUninitializedPropertyDeclaration/input.ts:77:5
   |
77 |     declare a: number;
   |     ^^^^^^^

